--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<!-- Ajout de l'attribut "lang": -->
+<html lang="fr">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Ajout d'un titre:  -->
+    <title>Nina Carducci photographe</title>
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -10,7 +14,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <meta charset="UTF-8" />
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -21,7 +24,8 @@
     <script src="./assets/scripts.js"></script>
   </head>
   <body>
-    <div class="top-header">
+    <!-- Remplacer la <div> par la balise <header> -->
+    <header class="top-header">
       <h3 class="name">Nina Carducci</h3>
       <div class="nav">
         <ul>
@@ -34,86 +38,93 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img src="assets/images/instagram.webp" alt=""
+            >
+              <!-- Renseigner le "alt": -->
+              <img src="assets/images/instagram.webp" alt="logo d'instagram"
             /></a>
           </li>
         </ul>
       </div>
-    </div>
-    <div id="header">
-      <div
-        id="carouselExampleIndicators"
-        class="carousel slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="./assets/images/slider/ryoji-iwata.webp"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./assets/images/slider/nicholas-green.webp"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./assets/images/slider/edward-cisneros.webp"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-        </div>
+    </header>
+    <!-- Supression de la <div> avec l' "id" "haerder" qui est inutilisé: -->
+    <!-- <div> -->
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indicators">
         <button
-          class="carousel-control-prev"
           type="button"
           data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
         <button
-          class="carousel-control-next"
           type="button"
           data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
       </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <!-- Renseigner le "alt": -->
+          <img
+            src="./assets/images/slider/ryoji-iwata.webp"
+            class="d-block w-100"
+            alt="Piéton traversant un passage clouté."
+          />
+        </div>
+        <div class="carousel-item">
+          <!-- Renseigner le "alt": -->
+          <img
+            src="./assets/images/slider/nicholas-green.webp"
+            class="d-block w-100"
+            alt="Personnes enthousiastes au milieu d'un publique debout."
+          />
+        </div>
+        <div class="carousel-item">
+          <!-- Renseigner le "alt": -->
+          <img
+            src="./assets/images/slider/edward-cisneros.webp"
+            class="d-block w-100"
+            alt=" Couple de mariés s'embrassant devant des convives qui applaudissent."
+          />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
+    <!-- </div> -->
     <div id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.webp" />
+        <!-- Ajout de l'attribut "alt" -->
+        <img src="./assets/images/nina.webp" alt="Portrait de Nina" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -138,50 +149,60 @@
       <h3 class="title">Portfolio</h3>
       <div class="container py-3">
         <div class="gallery" style="display: none">
+          <!-- Ajout de l'attribut "alt" sur chaque photo de la galerie:-->
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul.webp"
+            alt="Publique dansant au pied d'une scène sur laquelle jouent des musiciens."
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou.webp"
+            alt="Portrait d'un homme en costume,debout, les bras croisés."
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman.webp"
+            alt=" Deux femmes riant assisent autour d'une table."
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing.webp"
+            alt="Mains de deux personnes qui se rejoignent."
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji.webp"
+            alt="Portrait d'un homme les yeux fermés."
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens.webp"
+            alt="Couple de jeunes mariès se tenant par la main en riant."
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg.webp"
+            alt="Portrait d'une femme les yeux baissés se recoiffant."
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill.webp"
+            alt="Homme chantant dans un micro entouré de lumière et de fumée."
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp"
+            alt="Femme riant au éclat assise à un bureau devant un ordinateur."
           />
         </div>
       </div>
@@ -264,11 +285,12 @@
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
           <form action="" method="post">
-            <label>Nom</label>
+            <!-- Ajout des attributs "for" aux "label": -->
+            <label for="nom">Nom</label>
             <input type="text" name="nom" id="nom" />
-            <label>Email</label>
+            <label for="email">Email</label>
             <input type="email" name="email" id="email" />
-            <label>Message</label>
+            <label for="message">Message</label>
             <textarea
               name="message"
               id="message"
@@ -279,7 +301,8 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.webp" />
+          <!-- Ajout de l'attribut "alt": -->
+          <img src="./assets/images/camera.webp" alt="Appareil photo." />
         </div>
       </div>
     </div>
