--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       content="La photographe professionnel Carducci couvre des événemnts comme les mariages, les concerts et réalise aussi des portraits ou des photos d'entreprise."
     />
 
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
-    <!-- <link
+    <!-- <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" /> -->
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
       integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> -->
+    />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -90,16 +90,16 @@
         "url": "https://isidoresko.github.io/ninacarducci.github.io/"
       }
     </script>
-    <!-- <script
+    <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
       integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script> -->
+    ></script>
 
     <!-- Ajout de "defer" sur le fichiers javScript: -->
-    <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+    <!-- <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script> -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
