--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-
+   
     <!-- Open Graph data / Facebook Linkedin -->
     <meta property="og:type" content="website" />
     <meta
@@ -83,14 +83,18 @@
         "url": "https://isidoresko.github.io/ninacarducci.github.io/"
       }
     </script>
+
+ <!-- jQuery CDN -->
+ <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
+
     <!-- Ajout de "defer" sur le fichiers javScript: -->
     <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
       defer
-    ></script>
+    ></script> -->
     <script src="./assets/maugallery.js" defer></script>
     <script src="./assets/scripts.js" defer></script>
   </head>
