--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
       content="La photographe professionnel Carducci couvre des événemnts comme les mariages, les concerts et réalise aussi des portraits ou des photos d'entreprise."
     />
 
-    <link
+    <!-- <link
       rel="stylesheet"
       href="./assets/bootstrap/bootstrap.min.css"
       media="print"
       onload="this.media='all'"
-    />
+    /> -->
     <!-- <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" /> -->
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
@@ -35,8 +38,8 @@
      /> -->
 
     <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
 
     <!-- Open Graph data / Facebook Linkedin -->
     <meta property="og:type" content="website" />
@@ -100,19 +103,31 @@
 
     <!-- Ajout de "defer" sur le fichiers javScript: -->
     <!-- jQuery CDN -->
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
       defer
-    ></script>
-    <!-- <script
+    ></script> -->
+    <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
       defer
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      defer
+    ></script>
+    <!-- <script
+      src="./assets/bootstrap/bootstrap.bundle.min.js"
+      onload="this.media='all'"
+      defer
     ></script> -->
-    <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
     <script src="./assets/maugallery.js" defer></script>
     <script src="./assets/scripts.js" defer></script>
   </head>
