--- a/index.html
+++ b/index.html
@@ -14,32 +14,19 @@
       name="description"
       content="La photographe professionnel Carducci couvre des événemnts comme les mariages, les concerts et réalise aussi des portraits ou des photos d'entreprise."
     />
-
-    <!-- <link
-      rel="stylesheet"
-      href="./assets/bootstrap/bootstrap.min.css"
-      media="print"
-      onload="this.media='all'"
-    /> -->
     <!-- <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" /> -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     />
     <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
-    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
-     /> -->
+    />
 
     <link rel="stylesheet" href="./assets/style.css" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Open Graph data / Facebook Linkedin -->
     <meta property="og:type" content="website" />
@@ -76,11 +63,12 @@
     <!-- Ajout de la structure JSON-LD pour les données structurées; référencement local -->
     <script type="application/ld+json">
       {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Nina Carducci",
         "image": "https://isidoresko.github.io/ninacarducci.github.io/assets/images/picture-nina-carducci.webp",
         "telephone": "05 56 67 78 89",
+        "priceRange": "$$",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "68 avenue Alsace-Lorraine",
@@ -102,13 +90,6 @@
     </script>
 
     <!-- Ajout de "defer" sur le fichiers javScript: -->
-    <!-- jQuery CDN -->
-    <!-- <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-      defer
-    ></script> -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -119,10 +100,10 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       defer
     ></script>
-    <script
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
       defer
-    ></script>
+    ></script> -->
     <!-- <script
       src="./assets/bootstrap/bootstrap.bundle.min.js"
       onload="this.media='all'"
