--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
       name="description"
       content="La photographe professionnel Carducci couvre des événemnts comme les mariages, les concerts et réalise aussi des portraits ou des photos d'entreprise."
     />
-    <!-- <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" /> -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       defer
     />
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-      rel="stylesheet"
+      as="style"
+      onload="this.rel='stylesheet'"
     />
 
     <link rel="stylesheet" href="./assets/style.css" />
@@ -101,15 +102,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       defer
     ></script>
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-      defer
-    ></script> -->
-    <!-- <script
-      src="./assets/bootstrap/bootstrap.bundle.min.js"
-      onload="this.media='all'"
-      defer
-    ></script> -->
     <script src="./assets/maugallery.js" defer></script>
     <script src="./assets/scripts.js" defer></script>
   </head>
