--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
       name="description"
       content="La photographe professionnel Carducci couvre des événemnts comme les mariages, les concerts et réalise aussi des portraits ou des photos d'entreprise."
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      defer
-    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       as="style"
       onload="this.rel='stylesheet'"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      defer
+    />
     <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Open Graph data / Facebook Linkedin -->
     <meta property="og:type" content="website" />
@@ -169,6 +169,8 @@
             src="./assets/images/slider/picture-ryoji-iwata.webp"
             class="d-block w-100"
             alt="Piéton traversant un passage clouté."
+            width="1355"
+            height="627"
           />
         </div>
         <div class="carousel-item">
@@ -177,6 +179,8 @@
             src="./assets/images/slider/concert-nicholas-green.webp"
             class="d-block w-100"
             alt="Personnes enthousiastes au milieu d'un publique debout."
+            width="1355"
+            height="627"
           />
         </div>
         <div class="carousel-item">
