--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      media="print"
+      onload="this.media='all'"
     />
     <link rel="stylesheet" href="./assets/style.css" />
 
