--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <!-- <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       as="style"
       onload="this.rel='stylesheet'"
-    />
+    /> -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -62,49 +62,6 @@
       property="twitter:image"
       content="https://isidoresko.github.io/ninacarducci.github.io/assets/images/picture-nina-carducci.webp"
     />
-
-    <!-- Ajout de la structure JSON-LD pour les données structurées; référencement local -->
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "Nina Carducci",
-        "image": "https://isidoresko.github.io/ninacarducci.github.io/assets/images/picture-nina-carducci.webp",
-        "telephone": "05 56 67 78 89",
-        "priceRange": "$$",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "68 avenue Alsace-Lorraine",
-          "addressLocality": "Bordeaux",
-          "addressCountry": "France",
-          "postalCode": "33200"
-        },
-        "openingHoursSpecification": {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": {
-            "@type": "DayOfWeek",
-            "name": "Monday Tuesday Wednesday Thursday Friday"
-          },
-          "opens": "10:00",
-          "closes": "19:00"
-        },
-        "url": "https://isidoresko.github.io/ninacarducci.github.io/"
-      }
-    </script>
-
-    <!-- Ajout de "defer" sur le fichiers javScript: -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-      defer
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      defer
-    ></script>
-    <script src="./assets/maugallery.js" defer></script>
-    <script src="./assets/scripts.js" defer></script>
   </head>
 
   <body>
@@ -416,5 +373,47 @@
         </div>
       </div>
     </section>
+    <!-- Ajout de "defer" sur le fichiers javScript: -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
+    <script src="./assets/maugallery.js" defer></script>
+    <script src="./assets/scripts.js" defer></script>
+    <!-- Ajout de la structure JSON-LD pour les données structurées; référencement local -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Nina Carducci",
+        "image": "https://isidoresko.github.io/ninacarducci.github.io/assets/images/picture-nina-carducci.webp",
+        "telephone": "05 56 67 78 89",
+        "priceRange": "50€ - 400€",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "68 avenue Alsace-Lorraine",
+          "addressLocality": "Bordeaux",
+          "addressRegion": "Nouvelle-Aquitaine",
+          "addressCountry": "France",
+          "postalCode": "33200"
+        },
+        "openingHoursSpecification": {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": {
+            "@type": "DayOfWeek",
+            "name": "Monday Tuesday Wednesday Thursday Friday"
+          },
+          "opens": "10:00",
+          "closes": "19:00"
+        },
+        "url": "https://isidoresko.github.io/ninacarducci.github.io/"
+      }
+    </script>
   </body>
 </html>
