--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
       name="description"
       content="La photographe professionnel Carducci couvre des événemnts comme les mariages, les concerts et réalise aussi des portraits ou des photos d'entreprise."
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      media="print"
-      onload="this.media='all'"
-    />
+
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/style.min.css" />
 
     <!-- Open Graph data / Facebook Linkedin -->
@@ -371,10 +367,7 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      defer
-    ></script>
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="./assets/maugallery.min.js" defer></script>
     <script src="./assets/scripts.min.js" defer></script>
     <!-- Ajout de la structure JSON-LD pour les données structurées; référencement local -->
