--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
         </div>
       </div>
     </section>
+
     <!-- Ajout de "defer" sur le fichiers javScript: -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -367,7 +368,7 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
     <script src="./assets/maugallery.min.js" defer></script>
     <script src="./assets/scripts.min.js" defer></script>
     <!-- Ajout de la structure JSON-LD pour les données structurées; référencement local -->
