--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
           <img
             src="./assets/images/slider/picture-ryoji-iwata.webp"
             class="d-block w-100"
+            loading="lazy"
             alt="Piéton traversant un passage clouté."
             width="1355"
             height="627"
@@ -122,6 +123,7 @@
           <img
             src="./assets/images/slider/concert-nicholas-green.webp"
             class="d-block w-100"
+            loading="lazy"
             alt="Personnes enthousiastes au milieu d'un publique debout."
             width="1355"
             height="627"
@@ -132,6 +134,7 @@
           <img
             src="./assets/images/slider/wedding-edward-cisneros.webp"
             class="d-block w-100"
+            loading="lazy"
             alt=" Couple de mariés s'embrassant devant des convives qui applaudissent."
           />
         </div>
@@ -161,6 +164,7 @@
         <!-- Ajout de l'attribut "alt" -->
         <img
           src="./assets/images/picture-nina-carducci.webp"
+          loading="lazy"
           alt="Portrait de Nina"
         />
       </div>
@@ -196,53 +200,62 @@
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/concert-aaron-paul.webp"
+            loading="lazy"
             alt="Publique dansant au pied d'une scène sur laquelle jouent des musiciens."
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
+            loading="lazy"
             src="./assets/images/gallery/entreprise/business-ali-morshedlou.webp"
             alt="Portrait d'un homme en costume,debout, les bras croisés."
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
+            loading="lazy"
             src="./assets/images/gallery/entreprise/business-jason-goodman.webp"
             alt=" Deux femmes riant assisent autour d'une table."
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
+            loading="lazy"
             src="./assets/images/gallery/mariage/wedding-hannah-busing.webp"
             alt="Mains de deux personnes qui se rejoignent."
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
+            loading="lazy"
             src="./assets/images/gallery/portraits/picture-ade-tunji.webp"
             alt="Portrait d'un homme les yeux fermés."
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
+            loading="lazy"
             src="./assets/images/gallery/mariage/wedding-jakob-owens.webp"
             alt="Couple de jeunes mariès se tenant par la main en riant."
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
+            loading="lazy"
             src="./assets/images/gallery/portraits/picture-nino-van-prattenburg.webp"
             alt="Portrait d'une femme les yeux baissés se recoiffant."
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
+            loading="lazy"
             src="./assets/images/gallery/concerts/concertl-austin-neil.webp"
             alt="Homme chantant dans un micro entouré de lumière et de fumée."
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
+            loading="lazy"
             src="./assets/images/gallery/entreprise/business-mateus-campos-felipe.webp"
             alt="Femme riant au éclat assise à un bureau devant un ordinateur."
           />
@@ -356,7 +369,11 @@
         </div>
         <div class="picture right">
           <!-- Ajout de l'attribut "alt": -->
-          <img src="./assets/images/camera.webp" alt="Appareil photo." />
+          <img
+            src="./assets/images/camera.webp"
+            loading="lazy"
+            alt="Appareil photo."
+          />
         </div>
       </div>
     </section>
