--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       content="La photographe professionnel Carducci couvre des événemnts comme les mariages, les concerts et réalise aussi des portraits ou des photos d'entreprise."
     />
 
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/bootstrap/bootstrap.min.css"
+      media="all"
+    />
     <link rel="stylesheet" href="./assets/style.min.css" />
 
     <!-- Open Graph data / Facebook Linkedin -->
