--- a/index.html
+++ b/index.html
@@ -123,8 +123,6 @@
                 loading="lazy"
                 class="d-block w-100"
                 alt="Piéton traversant un large passage clouté."
-                width="1355"
-                height="627"
               />
             </div>
             <div class="carousel-item">
@@ -133,8 +131,6 @@
                 loading="lazy"
                 class="d-block w-100"
                 alt="Personnes enthousiastes au milieu d'un publique debout."
-                width="1355"
-                height="627"
               />
             </div>
             <div class="carousel-item">
@@ -143,8 +139,6 @@
                 loading="lazy"
                 class="d-block w-100"
                 alt="Couple de mariés s'embrassant devant des convives qui applaudissent."
-                width="1355"
-                height="627"
               />
             </div>
           </div>
@@ -303,7 +297,7 @@
               </p>
             </div>
             <div class="service__price">
-              <span>350€/demi journée</span>
+              <p>350€/demi journée</p>
               <span>Matériel, déplacement inclus</span>
             </div>
           </div>
@@ -351,10 +345,11 @@
         </figure>
       </div>
     </main>
-    <div id="contact">
+    <!-- Changement de la <div> en balise <footer>: -->
+    <footer id="contact">
       <div class="container">
         <div class="form-container">
-          <h3>Une question ? Une demande de devis ?</h3>
+          <h2>Une question ? Une demande de devis ?</h2>
           <p>
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
@@ -385,7 +380,7 @@
           />
         </div>
       </div>
-    </div>
+    </footer>
     <!-- Ajout de "defer" sur le fichiers javScript: -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
