--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Ajout d'une balise <title>: -->
     <title>
       Photographe professionnel de concerts, mariages, entreprises, portraits -
       Nina Carducci - Bordeaux
@@ -16,13 +17,8 @@
 
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.min.css" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-      rel="stylesheet"
-    /> -->
-    <!-- Open Graph data / Facebook Linkedin -->
+
+   <!-- Open Graph data / Facebook Linkedin: -->
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
@@ -38,7 +34,7 @@
       content="https://isidoresko.github.io/ninacarducci.github.io/assets/images/picture-nina-carducci.webp"
     />
 
-    <!-- Twitter Card Open Graph -->
+    <!-- Twitter Card Open Graph: -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
@@ -120,9 +116,10 @@
             <div class="carousel-item active">
               <img
                 src="./assets/images/slider/picture-ryoji-iwata.webp"
-                loading="lazy"
                 class="d-block w-100"
                 alt="Piéton traversant un large passage clouté."
+                width="1355"
+                height="627"
               />
             </div>
             <div class="carousel-item">
