--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
                 loading="lazy"
                 class="d-block w-100"
                 alt="Personnes enthousiastes au milieu d'un publique debout."
+                width="1355"
+                height="627"
               />
             </div>
             <div class="carousel-item">
