--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.min.css" />
 
-   <!-- Open Graph data / Facebook Linkedin: -->
+    <!-- Open Graph data / Facebook Linkedin: -->
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
@@ -296,6 +296,7 @@
               </p>
             </div>
             <div class="service__price">
+              <!-- Remplacer la <h4> par la balise <p> -->
               <p>350€/demi journée</p>
               <span>Matériel, déplacement inclus</span>
             </div>
@@ -334,11 +335,12 @@
       <div class="quote">
         <figure>
           <blockquote>
-            <h1 class="quote__text">
+            <!-- Remplacer la <h1> par la balise <p> -->
+            <p class="quote__text">
               De manière inconsciente, je crois, je guette un regard, une
               expression, des traits ou une nostalgie capable de résumer ou plus
               exactement de révéler une vie
-            </h1>
+            </p>
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
