--- a/index.html
+++ b/index.html
@@ -335,12 +335,12 @@
       <div class="quote">
         <figure>
           <blockquote>
-            <!-- Remplacer la <h1> par la balise <p> -->
-            <p class="quote__text">
+            <!-- Remplacer la <h1> par la balise <h2> -->
+            <h2 class="quote__text">
               De manière inconsciente, je crois, je guette un regard, une
               expression, des traits ou une nostalgie capable de résumer ou plus
               exactement de révéler une vie
-            </p>
+            </h2>
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
