--- a/index.html
+++ b/index.html
@@ -296,8 +296,7 @@
               </p>
             </div>
             <div class="service__price">
-              <!-- Remplacer la <h4> par la balise <p> -->
-              <p>350€/demi journée</p>
+              <h4>350€/demi journée</h4>
               <span>Matériel, déplacement inclus</span>
             </div>
           </div>
@@ -311,8 +310,7 @@
               </p>
             </div>
             <div class="service__price">
-              <!-- Remplacer la <h4> par la balise <p> -->
-              <p>50€/photo</p>
+              <h4>50€/photo</h4>
               <span>2 AR par photo</span>
             </div>
           </div>
@@ -325,8 +323,7 @@
               </p>
             </div>
             <div class="service__price">
-              <!-- Remplacer la <h4> par la balise <p> -->
-              <p>400€ album A4</p>
+              <h4>400€ album A4</h4>
               <span>30 pages recto/verso</span>
             </div>
           </div>
